update client lÃesson